--- a/.github/workflows/render_readme.yaml
+++ b/.github/workflows/render_readme.yaml
@@ -21,7 +21,9 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           use-public-rspm: true
-
+          
+      - uses: tomjemmett/renv-install-system-deps@v1
+      
       - uses: r-lib/actions/setup-renv@v1
 
       - name: Build Readme
