--- a/.github/workflows/render_readme.yaml
+++ b/.github/workflows/render_readme.yaml
@@ -27,7 +27,7 @@ jobs:
       - uses: r-lib/actions/setup-renv@v1
 
       - name: Build Readme
-        run: Rscript -e 'rmarkdown::render("Readme.rmd")'
+        run: Rscript -e 'rmarkdown::render("Readme.Rmd")'
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
