--- a/.github/workflows/render_readme.yaml
+++ b/.github/workflows/render_readme.yaml
@@ -1,14 +1,13 @@
 on:
   issues:
     types: [opened]
-  workflow_dispatch:
 
 name: Render readme and create a PR
 
 jobs:
   render_readme:
     runs-on: ubuntu-latest
-    # if: github.event.label.name == 'airtable-update'
+    if: github.event.label.name == 'airtable-update'
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
